Fix overlay overflow

--- a/src/models/UI/ImageLink/ImageLink.module.scss
+++ b/src/models/UI/ImageLink/ImageLink.module.scss
@@ -4,22 +4,24 @@
 .link {
   width: 100%;
   margin: 1em;
-  overflow: hidden;
   &__img {
+    overflow: hidden;
     position: relative;
+    aspect-ratio: 1/0.7;
     width: 100%;
     img {
       width: 100%;
+      height: 100%;
       object-fit: cover;
     }
   }
   &__overlay {
-    opacity: .3;
+    opacity: 0.3;
     @include m.absolute-background(rgba(#000, 0.7));
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: opacity .2s;
+    transition: opacity 0.2s;
     h3 {
       margin: 0;
       color: $color-basic;
